[package]
name = "muldiv"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/rust-muldiv"
license = "LGPL-2.1+"
keywords = ["integer", "arithmetic", "numerics"]
categories = ["algorithms"]
description = """
Provides a trait for numeric types to perform combined multiplication and
division with overflow protection
"""
include = [
    "src/lib.rs",
    "src/u64_muldiv.rs",
    "src/u64_muldiv_x86_64.rs",
    "COPYING",
    "README.md",
    "Cargo.toml",
]

[features]
default = []
x86-64-assembly = []

[dependencies]

[dev-dependencies]
num = { version = "0.1.*" }
rand = { version = "0.3.*" }

[badges]
travis-ci = { repository = "sdroege/rust-muldiv", branch = "master" }
