[package]
name = "muldiv"
version = "1.0.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/rust-muldiv"
license = "MIT"
keywords = ["integer", "arithmetic", "numerics", "no_std"]
categories = ["algorithms"]
description = """
Provides a trait for numeric types to perform combined multiplication and
division with overflow protection
"""
readme = "README.md"
include = [
    "src/lib.rs",
    "LICENSE",
    "README.md",
    "Cargo.toml",
    "CHANGELOG.md",
]
edition = "2018"

[dependencies]

[dev-dependencies]
quickcheck = "1"
